# ceres-raytracer

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py  test.py
.github/workflows/: cmake.yml  cmake_ubuntu18.yml  cmake_ubuntu20.yml  pypi_test_ubuntu18.yml  pypi_test_ubuntu20.yml  test_ubuntu18.yml  test_ubuntu20.yml
binary_test/: crtb_file.cpp  make.sh
ceresrt/: __init__.py
crt/: __init__.py  _pybind_convert.py  _rigid_body.py  _validate_values.py  _version.py  body_fixed.py  cameras.py  entity.py  lidars.py  lighting.py  lights.py  passes.py  render.py  rendering.py  rigid_body.py  static.py
doc/: ceres_rt.rst  conf.py  index.rst
doc/modules/: body_fixed.rst  cameras.rst  entity.rst  lights.rst  render.rst  rotations.rst
doc/modules/body_fixed/: body_fixed_entity.rst  body_fixed_group.rst
doc/modules/cameras/: pinhole_camera.rst
doc/modules/lights/: point_light.rst  square_light.rst
lib/: CMakeLists.txt
lib/INIReader/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  pybind.cpp
src/crt/: CMakeLists.txt  body_fixed.hpp  cameras.hpp  ceres_ray_tracer.hpp  do_lidar.hpp  do_render.hpp  entity.hpp  lighting.hpp  lights.hpp  load_model.hpp  passes.hpp  path_trace.hpp  ray_tracer.hpp  render.hpp  rotations.hpp  scene.hpp  scene_config.hpp  sceneconfig.hpp  static_scene.hpp  transform.hpp
src/crt/cameras/: simple_camera.hpp
src/crt/lidars/: CMakeLists.txt  lidar.hpp  lidars.hpp  pencil_beam_lidar.hpp  simple_lidar.hpp
src/crt/lights/: CMakeLists.txt
src/crt/materials/: CMakeLists.txt  btdfs.hpp  material.hpp  sampling.hpp  uvmaps.hpp
src/crt/models/: CMakeLists.txt  entity.hpp
src/crt/path_tracing/: CMakeLists.txt  bdpt.hpp  path_trace.hpp  pssmlt.hpp  unidirectional.hpp
src/crt/rendering_body_fixed/: body_fixed_entity.hpp  body_fixed_group.hpp
src/crt/rendering_dynamic/: CMakeLists.txt  entity.hpp  render.hpp
tests/: test_cameras.py
